packages/build/tests/error/build/fixtures/fail/plugin.js
module.exports = {
  name: 'netlify-plugin-test',
  async onInit({
    utils: {
      build: { fail },
    },
  }) {
    fail('test')
  },
}
